# dijkstra-algorithm-traffic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: DSA_Dijkstra'sAlgorithm_Traffic.ipynb
src/sf_shortest_path_simulation/: __init__.py  cli.py  sf_shortest_path_simulation.py
tests/: test_simulation.py
